@@ -1,6 +1,7 @@
 2010-05-05
 * add simple checks for iptables, iproute, dproxy, ez-ipupdate
 * add simple check for libusb 0.1
+* add simple check for vsftpd
 
 2010-05-04
 * small speedup for BusyBox (40 characters should be enough for the BusyBox
